syntax = "proto3";

import "ci/tasklet/common/proto/service.proto";
import "tasklet/services/ci/proto/ci.proto";
import "tasklet/api/tasklet.proto";
import "tasklet/services/yav/proto/yav.proto";

package alice.tasklet.create_release_ticket;

message Context {
    option (.tasklet.context) = true;
    yav_service.YavService yav = 1 [(.tasklet.inject) = true];
    .ci.CiService ci = 2 [(.tasklet.inject) = true];
}

message Ticket {
    string id = 1;
}

message Resource {
    string name = 1;
    int64 resource_id = 2;
}

message Config {
    string queue = 1;
    string project = 2;
    string release_chat_url = 3;
    string wiki_path = 4;
    string ticket_summary_template = 5;
    repeated Resource resources = 6;
    bool test_run = 7;
}

message State {
    bool success = 1;
}

message Input {
    ci.TaskletContext context = 1;

    Config config = 2;
}

message Output {
    State state = 1;
    Ticket ticket = 2;
}

message CreateReleaseTicket {
    option (.tasklet.tasklet_interface) = true;
    Input input = 1 [(.tasklet.input) = true];
    Output output = 2 [(.tasklet.output) = true];
    Context ctx = 3;
}
