syntax = "proto3";

import "ci/tasklet/common/proto/service.proto";
import "tasklet/api/tasklet.proto";

package alice.tasklet.run_yasm_alert_generator;

message Config {
    bool test_run = 1;
    int64 package_resource_id = 2;
    int64 binary_resource_id = 3;
}

message State {
    bool success = 1;
    string result = 2;
}

message Input {
    ci.TaskletContext context = 1;

    Config config = 2;
}

message Output {
    State state = 1;
}

message RunYasmAlertGenerator {
    option (.tasklet.tasklet_interface) = true;
    Input input = 1 [(.tasklet.input) = true];
    Output output = 2 [(.tasklet.output) = true];
}
